Fix overlay shadow non dark mode

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -14,7 +14,11 @@
     box-shadow: 0px 2px 3px $color-box-shadow;
 }
 .style-overlay-shadow {
-    box-shadow: 0 0 0 1px $color-border, 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
+    box-shadow: 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
+
+    @media (prefers-color-scheme: dark) {
+        box-shadow: 0 0 0 1px $color-border, 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
+    }
 }
 
 .style-nowrap {
